Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I404fe77587be7e7a199e0b638a99f8528bc55e9e

Former-commit-id: c1b4909f3cbe093b252637988769ee4bbc624b51

--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -1417,6 +1417,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080 piksela FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440 piksela QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Puna rezolucija koristi više baterije. Ako pređete na ovu rezoluciju, neke aplikacije će se možda restartovati."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Boje"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Prirodne"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Pojačane"</string>
@@ -1773,14 +1775,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Izgleda da <xliff:g id="NAME_0">^1</xliff:g> sporo funkcioniše. \n\nMožete da nastavite, ali aplikacije koje premestite na tu lokaciju će se možda prekidati i transferi podataka mogu dugo da traju. \n\nRazmislite o korišćenju bržeg uređaja <xliff:g id="NAME_1">^1</xliff:g> za bolji učinak."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kako ćete koristiti uređaj <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatirajte SD karticu za internu memoriju"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Sačuvajte aplikacije i medije za korišćenje samo na ovom tabletu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o podešavanju SD kartice&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatiraj"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatirajte SD karticu za internu memoriju"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Sačuvajte aplikacije i medije za korišćenje samo na ovom telefonu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o podešavanju SD kartice&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatiraj"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Ili"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatirajte SD karticu za prenosivu memoriju"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Čuvajte slike, video, muziku i drugo i pristupajte im sa drugih uređaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o podešavanju SD kartice&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatiraj"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Podesiću kasnije"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Želite da formatirate uređaj <xliff:g id="NAME">^1</xliff:g>?"</string>
