--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -1397,6 +1397,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"La resolució completa consumeix més bateria. Si canvies la resolució, és possible que algunes aplicacions es reiniciïn."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Colors"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturals"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Millorats"</string>
@@ -1752,14 +1754,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Sembla que <xliff:g id="NAME_0">^1</xliff:g> és lent. \n\nPots continuar, però les aplicacions que es desplacin a aquesta ubicació poden patir interrupcions i les transferències de dades poden tardar molt temps. \n\nPensa en la possibilitat de fer servir un <xliff:g id="NAME_1">^1</xliff:g> més ràpid per obtenir un rendiment millor."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Com utilitzaràs aquest suport (<xliff:g id="NAME">^1</xliff:g>)?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formata la targeta SD com a emmagatzematge intern"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Emmagatzema aplicacions i contingut multimèdia per fer-los servir només en aquesta tauleta. &lt;a href=https://support.google.com/android/answer/12153449&gt;Més informació sobre com pots configurar una targeta SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formata"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formata la targeta SD com a emmagatzematge intern"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Emmagatzema aplicacions i contingut multimèdia per fer-los servir només en aquest telèfon. &lt;a href=https://support.google.com/android/answer/12153449&gt;Més informació sobre com pots configurar una targeta SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formata"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"O"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formata la targeta SD com a emmagatzematge portàtil"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Emmagatzema fotos, vídeos, música i més, i accedeix-hi des d\'altres dispositius. &lt;a href=https://support.google.com/android/answer/12153449&gt;Més informació sobre com pots configurar una targeta SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formata"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configura més tard"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vols formatar aquest suport (<xliff:g id="NAME">^1</xliff:g>)?"</string>
@@ -1879,7 +1884,7 @@
     <string name="tether_settings_summary_hotspot_on_tether_on" msgid="6110241048260139633">"Punt d\'accés Wi-Fi activat, compartició de xarxa"</string>
     <string name="tether_settings_summary_hotspot_on_tether_off" msgid="5057598961245943644">"Punt d\'accés Wi-Fi activat"</string>
     <string name="tether_settings_summary_hotspot_off_tether_on" msgid="7181518138494995888">"Compartició de xarxa"</string>
-    <string name="tether_settings_disabled_on_data_saver" msgid="9054069463426952689">"No es pot compartir la xarxa ni utilitzar punts d\'accés Wi-Fi mentre la funció Economitzador de dades està activada"</string>
+    <string name="tether_settings_disabled_on_data_saver" msgid="9054069463426952689">"No es pot compartir la xarxa ni utilitzar punts d\'accés Wi-Fi mentre la funció Estalvi de dades està activada"</string>
     <string name="tether_settings_summary_hotspot_only" msgid="8529008147731140279">"Només punt d\'accés Wi‑Fi"</string>
     <string name="tether_settings_summary_usb_tethering_only" msgid="6351624505239356221">"Només USB"</string>
     <string name="tether_settings_summary_bluetooth_tethering_only" msgid="1451008625343274930">"Només Bluetooth"</string>
@@ -4803,7 +4808,7 @@
     <string name="condition_battery_summary" msgid="8436806157833107886">"Hi ha funcions restringides"</string>
     <string name="condition_cellular_title" msgid="155474690792125747">"Dades mòbils desactivades"</string>
     <string name="condition_cellular_summary" msgid="1678098728303268851">"Només es pot accedir a Internet per Wi‑Fi"</string>
-    <string name="condition_bg_data_title" msgid="2719263664589753094">"Economitzador de dades"</string>
+    <string name="condition_bg_data_title" msgid="2719263664589753094">"Estalvi de dades"</string>
     <string name="condition_bg_data_summary" msgid="1736255283216193834">"Hi ha funcions restringides"</string>
     <string name="condition_work_title" msgid="174326145616998813">"Perfil de treball desactivat"</string>
     <string name="condition_work_summary" msgid="7113473121312772398">"Per a les aplicacions i les notificacions"</string>
@@ -4872,8 +4877,8 @@
     <string name="configure" msgid="1499586749829665889">"Configura"</string>
     <string name="data_usage_other_apps" msgid="5649047093607329537">"Altres aplicacions que utilitzen dades"</string>
     <plurals name="data_saver_unrestricted_summary" formatted="false" msgid="3316296488378947221">
-      <item quantity="other"><xliff:g id="COUNT">%1$d</xliff:g> aplicacions poden utilitzar dades sense restricció quan l\'Economitzador de dades està activat</item>
-      <item quantity="one">1 aplicació pot utilitzar dades sense restricció quan l\'Economitzador de dades està activat</item>
+      <item quantity="other"><xliff:g id="COUNT">%1$d</xliff:g> aplicacions poden utilitzar dades sense restricció quan l\'Estalvi de dades està activat</item>
+      <item quantity="one">1 aplicació pot utilitzar dades sense restricció quan l\'Estalvi de dades està activat</item>
     </plurals>
     <string name="data_usage_title" msgid="4039024073687469094">"Dades principals"</string>
     <string name="data_usage_wifi_title" msgid="1060495519280456926">"Dades Wi‑Fi"</string>
@@ -4895,14 +4900,14 @@
     <string name="no_carrier_update_now_text" msgid="7898004907837200752">"Actualitzat ara mateix"</string>
     <string name="launch_mdp_app_text" msgid="8791816789749304897">"Mostra el pla"</string>
     <string name="launch_wifi_text" msgid="976421974332512894">"Mostra els detalls"</string>
-    <string name="data_saver_title" msgid="2593804270788863815">"Economitzador de dades"</string>
+    <string name="data_saver_title" msgid="2593804270788863815">"Estalvi de dades"</string>
     <string name="unrestricted_data_saver" msgid="7922563266857367495">"Dades sense restricció"</string>
     <string name="restrict_background_blocklisted" msgid="2308345280442438232">"Les dades en segon pla estan desactivades"</string>
     <string name="data_saver_on" msgid="7848893946018448793">"Activat"</string>
     <string name="data_saver_off" msgid="5891210864117269045">"Desactivat"</string>
-    <string name="data_saver_switch_title" msgid="7111538580123722959">"Utilitza l\'Economitzador de dades"</string>
+    <string name="data_saver_switch_title" msgid="7111538580123722959">"Utilitza l\'Estalvi de dades"</string>
     <string name="unrestricted_app_title" msgid="7117585996574329284">"Ús de dades sense restricció"</string>
-    <string name="unrestricted_app_summary" msgid="282698963532000403">"Permet dades sense restricció amb Economitzador de dades activat"</string>
+    <string name="unrestricted_app_summary" msgid="282698963532000403">"Permet dades sense restricció amb Estalvi de dades activat"</string>
     <string name="home_app" msgid="6056850504746902747">"Aplicació d\'inici"</string>
     <string name="no_default_home" msgid="3588073707316139318">"No hi ha cap pàgina d\'inici predeterminada"</string>
     <string name="lockpattern_settings_require_cred_before_startup" msgid="4098653943835666086">"Inici segur"</string>
