--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -1399,6 +1399,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"La máxima resolución consume más batería. Es posible que, si cambias la resolución, algunas apps se reinicien."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Seleccionada"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Colores"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturales"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Mejorados"</string>
@@ -1754,14 +1755,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Esta <xliff:g id="NAME_0">^1</xliff:g> funciona con lentitud. \n\nPuedes continuar, pero es posible que las aplicaciones que muevas a esta ubicación se vuelvan inestables y la transferencia de datos demore más tiempo.\n\nConsidera utilizar una <xliff:g id="NAME_1">^1</xliff:g> más rápida para mejorar el rendimiento."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"¿Cómo usarás <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatear tarjeta SD como almacenamiento interno"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Almacenar apps y contenido multimedia para usar solo en esta tablet. &lt;a href=https://support.google.com/android/answer/12153449&gt;Más información para configurar una tarjeta SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Almacenar apps y contenido multimedia para usar solo en esta tablet. &lt;a href=https://support.google.com/android/answer/12153449&gt;Más información para configurar una tarjeta SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatear"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatear tarjeta SD como almacenamiento interno"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Almacena apps y contenido multimedia para usar solo en este teléfono. &lt;a href=https://support.google.com/android/answer/12153449&gt;Más información para configurar una tarjeta SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Almacenar apps y contenido multimedia para usar solo en este teléfono. &lt;a href=https://support.google.com/android/answer/12153449&gt;Más información para configurar una tarjeta SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatear"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"O bien"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatear tarjeta SD como almacenamiento portátil"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Guarda fotos, videos, música y mucho más, y accede al contenido en otros dispositivos. &lt;a href=https://support.google.com/android/answer/12153449&gt;Más información para configurar una tarjeta SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Guarda fotos, videos, música y mucho más, y accede al contenido en otros dispositivos. &lt;a href=https://support.google.com/android/answer/12153449&gt;Más información para configurar una tarjeta SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatear"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configurar más tarde"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"¿Quieres formatear <xliff:g id="NAME">^1</xliff:g>?"</string>
