--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -913,7 +913,7 @@
     <string name="bluetooth_error_title" msgid="2284738188253690278"></string>
     <string name="bluetooth_connecting_error_message" msgid="3941893154784152112">"اتصال به <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ممکن نیست."</string>
     <string name="bluetooth_preference_scan_title" msgid="3460316252463771851">"اسکن برای دستگاه‌ها"</string>
-    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازآوری کردن"</string>
+    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"بازآوردن"</string>
     <string name="bluetooth_searching_for_devices" msgid="6541984133657573124">"در حال جستجو..."</string>
     <string name="bluetooth_preference_device_settings" msgid="1688662188157019998">"تنظیمات دستگاه"</string>
     <string name="bluetooth_preference_paired_dialog_title" msgid="1090131276572055841">"دستگاه مرتبط‌شده"</string>
@@ -1397,6 +1397,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+‎"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+‎"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"«وضوح کامل» از شارژ باتری بیشتری استفاده می‌کند. تغییر دادن وضوح ممکن است باعث شود برخی‌از برنامه‌ها بازراه‌اندازی شوند."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"رنگ‌"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"طبیعی"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"تقویت‌شده"</string>
@@ -1752,14 +1754,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"این <xliff:g id="NAME_0">^1</xliff:g> به نظر آهسته می‌آید. \n\nمی‌توانید ادامه دهید، اما ممکن است برنامه‌های منتقل شده به این مکان کند شوند و انتقال اطلاعات مدت زیادی طول بکشد. \n\nبرای عملکرد بهتر، استفاده از یک <xliff:g id="NAME_1">^1</xliff:g> سریع‌تر را در نظر بگیرید."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"چگونه از <xliff:g id="NAME">^1</xliff:g> استفاده خواهید کرد؟"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"‏قالب‌بندی کارت SD به‌عنوان حافظه داخلی"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"‏برنامه‌ها و رسانه‌ها را فقط برای استفاده در این رایانه لوحی ذخیره کنید. &lt;a href=https://support.google.com/android/answer/12153449&gt;درباره راه‌اندازی کارت SD بیشتر بدانید&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"قالب‌بندی"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"‏قالب‌بندی کارت SD به‌عنوان حافظه داخلی"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"‏برنامه‌ها و رسانه‌ها را فقط برای استفاده در این دستگاه ذخیره کنید. &lt;a href=https://support.google.com/android/answer/12153449&gt;درباره راه‌اندازی کارت SD بیشتر بدانید&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"قالب‌بندی"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"یا"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"‏قالب‌بندی کارت SD به‌عنوان فضای ذخیره‌سازی قابل‌حمل"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"‏عکس، ویدیو، موسیقی و غیره را ذخیره کنید و از دستگاه‌های دیگر به آن‌ها دسترسی داشته باشید. &lt;a href=https://support.google.com/android/answer/12153449&gt;درباره راه‌اندازی کارت SD بیشتر بدانید&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"قالب‌بندی"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"بعداً تنظیم شود"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"این <xliff:g id="NAME">^1</xliff:g> قالب‌بندی شود؟"</string>
@@ -3016,7 +3021,7 @@
     <string name="menu_stats_unplugged" msgid="7125297366200634285">"<xliff:g id="UNPLUGGED">%1$s</xliff:g> از زمان جدا کردن"</string>
     <string name="menu_stats_last_unplugged" msgid="230678127178268655">"در حین قطع اتصال آخر برای <xliff:g id="UNPLUGGED">%1$s</xliff:g>"</string>
     <string name="menu_stats_total" msgid="2713445396954503670">"مقدار کل استفاده"</string>
-    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازآوری کردن"</string>
+    <string name="menu_stats_refresh" msgid="6727628139586938835">"بازآوردن"</string>
     <string name="process_mediaserver_label" msgid="6135260215912215092">"سرور رسانه"</string>
     <string name="process_dex2oat_label" msgid="1190208677726583153">"بهینه‌سازی برنامه"</string>
     <string name="process_network_tethering" msgid="6822671758152900766">"اشتراک‌گذاری اینترنت"</string>
@@ -3412,7 +3417,7 @@
     <string name="vpn_create" msgid="7546073242936894638">"‏افزودن نمایه VPN"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"ویرایش نمایه"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"حذف نمایه"</string>
-    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه فعال"</string>
+    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه روشن"</string>
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏شبکه VPN اضافه نشده است"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏همیشه به VPN‌ متصل بمانید"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"توسط این برنامه پشتیبانی نمی‌شود"</string>
