--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1399,6 +1399,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"FHD+ 1080p"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"QHD+ 1440p"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"La haute résolution consomme davantage de batterie. Modifier la résolution peut entraîner le redémarrage de certaines applis."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Couleurs"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturelles"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Rehaussées"</string>
@@ -1754,14 +1756,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Ce <xliff:g id="NAME_0">^1</xliff:g> ne semble pas rapide. \n\nVous pouvez continuer, mais les applis déplacées vers cet emplacement risquent de se bloquer et les transferts de données pourront prendre du temps. \n\nVeuillez utiliser un <xliff:g id="NAME_1">^1</xliff:g> plus rapide pour de meilleures performances."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Comment utiliserez-vous ce support (<xliff:g id="NAME">^1</xliff:g>) ?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formater carte SD en tant que stockage interne"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Stockez les applis et contenus multimédias à utiliser sur cette tablette uniquement. &lt;a href=https://support.google.com/android/answer/12153449&gt;En savoir plus sur la configuration d\'une carte SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formater"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formater carte SD en tant que stockage interne"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Stockez les applis et contenus multimédias à utiliser sur ce téléphone uniquement. &lt;a href=https://support.google.com/android/answer/12153449&gt;En savoir plus sur la configuration d\'une carte SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formater"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Ou"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formater la carte SD en tant que stockage externe"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Stockez des photos, des vidéos, de la musique, etc., et accédez-y sur d\'autres appareils. &lt;a href=https://support.google.com/android/answer/12153449&gt;En savoir plus sur la configuration d\'une carte SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formater"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configurer plus tard"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formater le support (<xliff:g id="NAME">^1</xliff:g>) ?"</string>
