--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -1401,6 +1401,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Полната резолуција повеќе ја троши батеријата. Префрлањето на резолуцијата може да предизвика рестартирање кај некои апликации."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Избрано"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Бои"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Природни"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Нагласени"</string>
@@ -1756,14 +1757,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Оваа <xliff:g id="NAME_0">^1</xliff:g> се чини дека е бавна. \n\nМоже да продолжите, но апликациите што се преместени на оваа локација може да подзастануваат и префрлањето податоци може да одзема многу време. \n\nРазмислете за користење побрза <xliff:g id="NAME_1">^1</xliff:g> за подобра изведба."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Како ќе се користи <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Форматирајте SD-картичка за внатрешна меморија"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Складирајте апликации и аудиовизуелни содржини за да ги користите само на таблетов. &lt;a href=https://support.google.com/android/answer/12153449&gt;Дознајте повеќе за поставувањето SD-картичка&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Складирајте апликации и аудиовизуелни содржини за да ги користите само на таблетов. &lt;a href=https://support.google.com/android/answer/12153449&gt;Дознајте повеќе за поставувањето SD-картичка&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматирај"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Форматирајте SD-картичка за внатрешна меморија"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Складирајте апликации и аудиовизуелни содржини за да ги користите само на телефонов. &lt;a href=https://support.google.com/android/answer/12153449&gt;Дознајте повеќе за поставувањето SD-картичка&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Складирајте апликации и аудиовизуелни содржини за да ги користите само на телефонов. &lt;a href=https://support.google.com/android/answer/12153449&gt;Дознајте повеќе за поставувањето SD-картичка&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматирај"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"или"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Форматирајте SD-картичка за пренослив капацитет"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Складирајте фотографии, видеа, музика и друго и пристапувајте до нив од други уреди. &lt;a href=https://support.google.com/android/answer/12153449&gt;Дознајте повеќе за поставувањето SD-картичка&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Складирајте фотографии, видеа, музика и друго и пристапувајте до нив од други уреди. &lt;a href=https://support.google.com/android/answer/12153449&gt;Дознајте повеќе за поставувањето SD-картичка&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматирај"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Постави подоцна"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Дали да се форматира <xliff:g id="NAME">^1</xliff:g>?"</string>
