--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1443,6 +1443,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Plné rozlíšenie využíva vo väčšej miere batériu. Ak rozlíšenie prepnete, niektoré aplikácie sa môžu reštartovať."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Vybrané"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Farby"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Prirodzené"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Zosilnené"</string>
@@ -1800,14 +1801,14 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Zdá sa, že toto zariadenie (<xliff:g id="NAME_0">^1</xliff:g>) je spomalené. \n\nMôžete síce pokračovať, ale aplikácie prenesené do tohto umiestnenia sa môžu zasekávať a prenosy údajov môžu trvať dlho. \n\nZvážte použitie rýchlejšieho zariadenia (<xliff:g id="NAME_1">^1</xliff:g>) s lepšou výkonnosťou."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Ako budete používať zariadenie <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formátovať SD kartu ako interné úložisko"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Ukladajte aplikácie a médiá na použitie výhradne v tomto tablete. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Ukladajte aplikácie a médiá na použitie výhradne v tomto tablete. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formátovať"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formátovať SD kartu ako interné úložisko"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Ukladajte aplikácie a médiá na použitie výhradne v tomto telefóne. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Ukladajte aplikácie a médiá na použitie výhradne v tomto telefóne. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formátovať"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Alebo"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formátovať SD kartu ako prenosné úložisko"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Ukladajte fotky, videá, hudbu aj ďalší obsah a získavajte k nim prístup v iných zariadeniach. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Ukladajte fotky, videá, hudbu aj ďalší obsah a získavajte k nim prístup v iných zariadeniach. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formátovať"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Nastaviť neskôr"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formátovať úložisko <xliff:g id="NAME">^1</xliff:g>?"</string>
