--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -1417,6 +1417,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080 пиксела FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440 пиксела QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Пуна резолуција користи више батерије. Ако пређете на ову резолуцију, неке апликације ће се можда рестартовати."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Боје"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Природне"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Појачане"</string>
@@ -1773,14 +1775,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Изгледа да <xliff:g id="NAME_0">^1</xliff:g> споро функционише. \n\nМожете да наставите, али апликације које преместите на ту локацију ће се можда прекидати и трансфери података могу дуго да трају. \n\nРазмислите о коришћењу бржег уређаја <xliff:g id="NAME_1">^1</xliff:g> за бољи учинак."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Како ћете користити уређај <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Форматирајте SD картицу за интерну меморију"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Сачувајте апликације и медије за коришћење само на овом таблету. &lt;a href=https://support.google.com/android/answer/12153449&gt;Сазнајте више о подешавању SD картице&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматирај"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Форматирајте SD картицу за интерну меморију"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Сачувајте апликације и медије за коришћење само на овом телефону. &lt;a href=https://support.google.com/android/answer/12153449&gt;Сазнајте више о подешавању SD картице&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматирај"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Или"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Форматирајте SD картицу за преносиву меморију"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Чувајте слике, видео, музику и друго и приступајте им са других уређаја. &lt;a href=https://support.google.com/android/answer/12153449&gt;Сазнајте више о подешавању SD картице&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматирај"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Подесићу касније"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Желите да форматирате уређај <xliff:g id="NAME">^1</xliff:g>?"</string>
