--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -1397,6 +1397,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+‎"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+‎"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"مکمل ریزولیوشن آپ کی زیادہ بیٹری کا استعمال کرتا ہے۔ آپ کی ریزولیوشن پر سوئچ کرنے سے کچھ ایپس ری سٹارٹ ہو سکتی ہیں۔"</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"رنگ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"قدرتی"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"بڑھایا گیا"</string>
@@ -1752,14 +1754,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"یہ <xliff:g id="NAME_0">^1</xliff:g> سست لگ رہا ہے۔ \n\nآپ جاری رکھ سکتے ہیں، لیکن اس مقام میں منتقل کردہ ایپس رک سکتی ہیں اور ڈیٹا کی منتقلیوں میں کافی وقت لگ سکتا ہے۔ \n\nبہتر کارکردگی کیلئے تیز تر <xliff:g id="NAME_1">^1</xliff:g> استعمال کرنے پر غور کریں۔"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"آپ اس <xliff:g id="NAME">^1</xliff:g> کا استعمال کیسے کریں گے؟"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"‏داخلی اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"‏صرف اس ٹیبلیٹ پر استعمال کرنے کے لئے ایپس اور میڈیا کو اسٹور کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;‏SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"‏داخلی اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"‏صرف اس فون پر استعمال کرنے کے لئے ایپس اور میڈیا کو اسٹور کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;‏SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"یا"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"‏پورٹیبل اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"‏تصاویر، ویڈیوز، موسیقی وغیرہ کو اسٹور کریں اور دیگر آلات سے ان تک رسائی حاصل کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;‏SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"بعد میں سیٹ اپ کریں"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"اس <xliff:g id="NAME">^1</xliff:g> کو فارمیٹ کریں؟"</string>
