--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -1397,6 +1397,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Ukucaca okugcwele kusebenzisa ibhethri yakho eyengeziwe. Ukushintsha ukucaca kwakho kungase kubangele amanye ama-app ukuthi aqale kabusha."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Imibala"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Kwemvelo"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"I-Boost"</string>
@@ -1752,14 +1754,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Le-<xliff:g id="NAME_0">^1</xliff:g> ibonakala ihamba kancane. \n\nUngaqhubeka, kodwa izinhlelo zokusebenza ezihanjiswe kule ndawo zingangingiza futhi ukudluliselwa kwedatha kungathatha isikhathi eside. \n\nCabanga ukusebenzisa i-<xliff:g id="NAME_1">^1</xliff:g> esheshayo ukuze uthole ukusebenza okungcono."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Uzoyisebenzisa kanjani le <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Fometha ikhadi le-SD ukuze uthole isitoreji sangaphakathi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Gcina ama-app nemidiya ongayisebenzisa kule thebulethi kuphela. &lt;a href=https://support.google.com/android/answer/12153449&gt;Funda kabanzi ngokusetha ikhadi le-SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Ifomethi"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Fometha ikhadi le-SD ukuze uthole isitoreji sangaphakathi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Gcina ama-app nemidiya ongayisebenzisa kule foni kuphela. &lt;a href=https://support.google.com/android/answer/12153449&gt;Funda kabanzi ngokusetha ikhadi le-SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Ifomethi"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Noma"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Fometha ikhadi le-SD ukuze uthole isitoreji esiphathekayo"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Gcina izithombe, amavidiyo, umculo, nokuningi futhi ukufinyelele kwamanye amadivayisi. &lt;a href=https://support.google.com/android/answer/12153449&gt;Funda kabanzi ngokusetha ikhadi le-SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Ifomethi"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Setha emuva kwesikhathi"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Fomethi le <xliff:g id="NAME">^1</xliff:g>?"</string>
