--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -1397,6 +1397,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"ሙሉ ጥራት የባትሪዎን ተጨማሪ ይጠቀማል። ጥራትዎን መቀየር አንዳንድ መተግበሪያዎች እንደገና እንዲጀምሩ ሊያስደርግ ይችላል።"</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"ቀለማት"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ተፈጥሯዊ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"ተጨምሯል"</string>
@@ -1752,14 +1754,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"ይህ <xliff:g id="NAME_0">^1</xliff:g> ዝግምተኛ መስሎ ይታያል። \n\nመቀጠል ይችላሉ፣ ነገር ግን ወደዚህ አካባቢ የተንቀሳቀሱ መተግበሪያዎች ሊንተባተቡ እና የውሂብ ሽግግር ረዥም ጊዜ ሊወስድ ይችል ይሆናል። \n\nለተሻለ የስራ አፈጻጸም ፍጥነት ያለው <xliff:g id="NAME_1">^1</xliff:g> መጠቀምን ከግምት ያስገቡ።"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ይህን <xliff:g id="NAME">^1</xliff:g> እንዴት ይጠቀሙበታል?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ኤስዲ ካርድን ለውስጣዊ ማህደረ ትውስታ ቅርጸት ይስሩበት"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"በዚህ ጡባዊ ላይ ብቻ ለመጠቀም መተግበሪያዎችን እና ሚዲያን ያከማቹ። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ኤስዲ ካርድን ለውስጣዊ ማህደረ ትውስታ ቅርጸት ይስሩበት"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"በዚህ ስልክ ላይ ብቻ ለመጠቀም መተግበሪያዎችን እና ሚዲያን ያስቀምጡ። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ወይም"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ኤስዲ ካርድን ለተንቀሳቃሽ ማከማቻ ቅርጸት ይስሩበት"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ፎቶዎችን፣ ቪድዮዎችን፣ ሙዚቃን እና ሌሎችንም ያከማቹ እና ከሌሎች መሣሪያዎች ሆነው ይድረሷቸው። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"በኋላ ያዋቅሩ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ይህ <xliff:g id="NAME">^1</xliff:g> ይቀረጽ?"</string>
