--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -1397,6 +1397,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p – FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p – QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Täysi resoluutio kuluttaa enemmän akkua. Jotkin sovellukset käynnistyvät uudelleen, kun vaihdat resoluutiota."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Värit"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Luonnollinen"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Tehostettu"</string>
@@ -1752,14 +1754,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"<xliff:g id="NAME_0">^1</xliff:g>  vaikuttaa hitaalta.\n\nVoit jatkaa, mutta tähän sijaintiin siirrettävät sovellukset voivat toimia heikosti ja tiedonsiirto voi kestää kauan.\n\nNopeampi <xliff:g id="NAME_1">^1</xliff:g> voi toimia tehokkaammin."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Miten <xliff:g id="NAME">^1</xliff:g> otetaan käyttöön?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Alusta SD-kortti sisäiseksi tallennustilaksi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Tallenna sovelluksia ja mediaa vain tämän tabletin käyttöön. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Alusta"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Alusta SD-kortti sisäiseksi tallennustilaksi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Tallenna sovelluksia ja mediaa vain tämän puhelimen käyttöön. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Alusta"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"tai"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Alusta SD-kortti siirrettäväksi tallennustilaksi"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Tallenna esimerkiksi musiikkia ja videoita ja käytä niitä muilla laitteilla. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Alusta"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Määritä myöhemmin"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Alustetaanko tämä <xliff:g id="NAME">^1</xliff:g>?"</string>
