--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -1441,6 +1441,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"+1080p FHD"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"+1440p QHD"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"רזולוציה מלאה מובילה לשימוש גבוה בסוללה. שינוי הרזולוציה עלול לגרום להפעלה מחדש של חלק מהאפליקציות."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"צבעים"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"גוון טבעי"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"גוון מוגבר"</string>
@@ -1798,14 +1800,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"נראה שפעולת ה-<xliff:g id="NAME_0">^1</xliff:g> הזה איטית. \n\nתוכל להמשיך, אבל אפליקציות שהועברו אל המיקום הזה עשויות לפעול באופן מקוטע והעברות הנתונים עשויות לארוך זמן רב. \n\nמומלץ להשתמש ב-<xliff:g id="NAME_1">^1</xliff:g> מהיר יותר לשיפור הביצועים."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"למה ישמש <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"‏פירמוט של כרטיס SD לאחסון פנימי"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"‏ניתן לאחסן את האפליקציות והמדיה לשימוש בטאבלט הזה בלבד. &gt;a href=https://support.google.com/android/answer/12153449&lt;מידע נוסף על ההגדרה של כרטיס SD‏&gt;/a&lt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"פירמוט"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"‏פירמוט של כרטיס SD לאחסון פנימי"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"‏ניתן לאחסן את האפליקציות והמדיה לשימוש בטלפון הזה בלבד. &gt;a href=https://support.google.com/android/answer/12153449&lt;מידע נוסף על ההגדרה של כרטיס SD‏&gt;/a&lt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"פירמוט"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"או"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"‏פירמוט של כרטיס SD לאחסון נייד"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"‏אפשר לאחסן תמונות, סרטונים, מוזיקה ועוד ולגשת אליהם ממכשירים אחרים. &gt;a href=https://support.google.com/android/answer/12153449&lt;מידע נוסף על ההגדרה של כרטיס SD‏&gt;/a&lt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"פירמוט"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"אני אגדיר מאוחר יותר"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"לפרמט <xliff:g id="NAME">^1</xliff:g> זה?"</string>
