--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -1437,6 +1437,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Esant visai skyrai eikvojama daugiau akumuliatoriaus energijos. Perjungus skyrą, kai kurios programos gali būti paleistos iš naujo."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Spalvos"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Natūrali"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Suintensyvinta"</string>
@@ -1794,14 +1796,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"<xliff:g id="NAME_0">^1</xliff:g> veikia lėtai. \n\nGalite tęsti, bet gali būti, kad į šią vietą perkeltos programos veiks lėtai, o duomenų perkėlimas užtruks ilgai. \n\nTurėtumėte naudoti <xliff:g id="NAME_1">^1</xliff:g>, kad užtikr. geresnį našumą."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kaip naudosite šią saugyklą (<xliff:g id="NAME">^1</xliff:g>)?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatuokite SD kortelę kaip vidinę atmintį"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Saugokite programas ir mediją, kad galėtumėte tornaudoti tik šiame planšetiniame kompiuteryje. &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatuokite SD kortelę kaip vidinę atmintį"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Saugokite programas ir mediją, kad galėtumėte naudoti tik šiame telefone &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Arba"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatuoti SD kortelę kaip nešiojamąją saugyklą"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Saugokite nuotraukas, vaizdo įrašus, muziką ir kitą turinį, kurį galėsite pasiekti kituose įrenginiuose. &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Nustatyti vėliau"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatuoti šią saugyklą (<xliff:g id="NAME">^1</xliff:g>)?"</string>
