--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1437,6 +1437,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Исходное разрешение расходует больше заряда. При смене разрешения некоторые приложения могут перезапуститься."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Цвета"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Натуральные"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Яркие"</string>
@@ -1794,14 +1796,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"<xliff:g id="NAME_0">^1</xliff:g> работает медленно. \n\nВ перемещенных приложениях могут происходить сбои, а обмен данными может занимать много времени. \n\nИспользуйте более быстрое устройство (<xliff:g id="NAME_1">^1</xliff:g>)."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Как будет использоваться <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Форматирование SD-карты как внутренней памяти"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Хранить приложения и медиафайлы для использования только на этом планшете. Подробнее &lt;a href=https://support.google.com/android/answer/12153449&gt;о том, как настроить SD-карту&lt;/a&gt;…"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматировать"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Форматирование SD-карты как внутренней памяти"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Вы сможете хранить на ней приложения и медиафайлы для использования только на этом телефоне. Подробнее &lt;a href=https://support.google.com/android/answer/12153449&gt;о том, как настроить SD-карту&lt;/a&gt;…"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматировать"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Или"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Форматирование SD-карты как съемного накопителя"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Вы сможете хранить на ней фото, видео, музыку и файлы для использования на других устройствах. Подробнее &lt;a href=https://support.google.com/android/answer/12153449&gt;о том, как настроить SD-карту&lt;/a&gt;…"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматировать"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Настроить позже"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Отформатировать устройство \"<xliff:g id="NAME">^1</xliff:g>\"?"</string>
