--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -1397,6 +1397,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Tam çözünürlük daha fazla pil kullanır. Çözünürlük değiştirildiğinde bazı uygulamalar yeniden başlatılabilir."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Renkler"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Doğal"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Zenginleştirilmiş"</string>
@@ -1752,14 +1754,17 @@
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Bu <xliff:g id="NAME_0">^1</xliff:g> yavaş görünüyor. \n\nDevam edebilirsiniz, ancak bu konuma taşınan uygulamalar takılabilir ve veri aktarımları uzun sürebilir. \n\nDaha iyi performans için daha hızlı bir <xliff:g id="NAME_1">^1</xliff:g> kullanmayı düşünün."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Bu <xliff:g id="NAME">^1</xliff:g> nasıl kullanılacak?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD kartı dahili depolama için biçimlendirin"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Uygulamaları ve medyaları yalnızca bu tablette kullanacak şekilde depolayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kart yapılandırma hakkında daha fazla bilgi&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Biçim"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD kartı dahili depolama için biçimlendirin"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Sadece bu telefonda kullanılacak uygulama ve medya dosyalarını depolayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kart yapılandırma hakkında daha fazla bilgi&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Biçim"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Veya"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD kartı taşınabilir depolama için biçimlendirin"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Fotoğraf, video, müzik ve diğer içerikleri depolayıp bunlara diğer cihazlardan erişin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kart yapılandırma hakkında daha fazla bilgi&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Biçim"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Sonra kur"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Bu <xliff:g id="NAME">^1</xliff:g> biçimlendirilsin mi?"</string>
